deploy on the Heroku cloud platform
gitattributes ignore Procfile

README refactor